force-app/main/default/objects/ShoeComparisonPopup__e/ShoeComparisonPopup__e.object-meta.xml
<CustomObject>
    <description>Event to popup of the Shoecomparison LWC</description>
    <label>ShoeComparisonPopup</label>
    <pluralLabel>ShoeComparisonPopups</pluralLabel>
</CustomObject>