force-app/main/default/objects/ShoeComparisonPopup__e/fields/IsModalOpen__c.field-meta.xml
<CustomField>
    <fullName>IsModalOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsModalOpen</label>
    <type>Checkbox</type>
</CustomField>