force-app/main/default/objects/ShoeComparisonPopup__e/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>ProductId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>